tests/success/simple_while.tig
while(1) do (print("output");print("\n");break)

