tests/fail/while_with_string_condition.tig
while "a" do print("a")
